

2010/xx/xx  ver 0.3.0
   - remove GLEW
   - implement RayIntersection.

2010/05/10  ver 0.2.0
   - implemente SkinndMesh, MorphingMesh.
   - implemente duplicate() method.
   - rewrite Loader class.
       - Now, compressed file is ok.
   - fix color component from (-128,127) to (0,255).
   - fix scale,biased coordinate.
       - Now, it's ok.

2010/04/08  ver 0.1.0
   - first release